fix work home link padding so it aligns with home nav

--- a/style.css
+++ b/style.css
@@ -299,7 +299,6 @@ p {
 
 .workNav a:first-of-type {
     font-weight: 700;
-    padding: 5px;
     margin-left: 0;
 }
 
